--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+.background{
+  background-size: cover;
+  background-image: linear-gradient(rgba(252, 213, 134, 0.3), rgba(4, 9, 30, 0.8)),url('../images/table_top.jpg');
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  
+min-height: 100vh;
+  margin: auto;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.3em;
+  /* background-size: cover;
+  background-image: linear-gradient(rgba(255, 237, 195, 0.3), rgba(4, 9, 30, 0.8)),url('../images/table_top.jpg'); */
+  
 }
