--- a/src/features/header/header.css
+++ b/src/features/header/header.css
@@ -12,3 +12,16 @@ input[type=number] {
 input{
     padding: 5px;
 }
+.title{
+  font-family: 'Alex Brush', cursive;
+  width: 100%;
+  font-size: 2.5rem;
+  padding: 10px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(255, 228, 195, 0.4);
+}
+.title input{
+  margin: 5px;
+}
