--- a/src/features/mealsList/mealsList.css
+++ b/src/features/mealsList/mealsList.css
@@ -23,10 +23,6 @@ ul{
 .favouritesBox{
     width: 100%;
    
-    
-    /* display: flex; */
-    
-    /* flex-direction: row; */    
 }
 .favs h3{
     font-family: 'Alex Brush', cursive;
@@ -36,9 +32,46 @@ ul{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 1em;
     display: flex;
+    flex-wrap: wrap;
+    
+    align-items: center;
+    
   }
   .favourites img{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     width: 100px ;
     
   }
+  .favSingle{
+    width: 200px;
+    height: 250px;
+    font-size: 0.8em;
+    font-weight: bold;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    box-shadow: 0 0 2px;
+    margin: 5px;
+  }
+  .favSingle img{
+    width: 80%;
+  }
+  .favButtons{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+  }
+  .favButtons button{
+    font-size: 0.5em;
+  }
+  .favButtons .removeButton{
+    background-color: rgb(175, 175, 175);
+  }
+  .favButtons .removeButton:hover{
+    background-color: rgb(117, 117, 117);
+  }
+    
+    
