--- a/src/features/mealsList/mealsList.css
+++ b/src/features/mealsList/mealsList.css
@@ -10,11 +10,8 @@ ul{
     padding: 10px;
     text-align: center;
     height: 100%;
-    /* display:flex; */
-    
-    /* flex-direction: column; */
     justify-content: space-around;
-    /* align-items: center; */
+   
     
 }
 .favSection{
@@ -33,8 +30,10 @@ ul{
     font-size: 1em;
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 20px;
     
     align-items: center;
+    justify-content: center;
     
   }
   .favourites img{
@@ -43,7 +42,7 @@ ul{
     
   }
   .favSingle{
-    width: 200px;
+    width: 250px;
     height: 250px;
     font-size: 0.8em;
     font-weight: bold;
@@ -65,7 +64,7 @@ ul{
     width: 100%;
   }
   .favButtons button{
-    font-size: 0.5em;
+    font-size: 0.7em;
   }
   .favButtons .removeButton{
     background-color: rgb(175, 175, 175);
@@ -73,5 +72,34 @@ ul{
   .favButtons .removeButton:hover{
     background-color: rgb(117, 117, 117);
   }
-    
+   
+  @media screen and (max-width: 600px) {
+    .meals{
+      display:flex;
+      flex-direction: column;   
+      min-height: 500px;
+  }
+    .favourites{
+      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+      font-size: 1em;
+      display: flex;
+      flex-wrap: wrap;      
+      align-items: center;
+      justify-content: space-around;
+    }
+    .favSingle{
+      width: 45%;
+      height: 250px;
+      font-size: 0.8em;
+      font-weight: bold;
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      box-shadow: 0 0 2px;
+      margin: 5px;
+    }
+
+  }
     
